--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-server:
-#Spring Boot application port
-    port: 8080
-
-aws:
-    dynamodb:
-#Endpoint that application might connect to
-endpoint: https://dynamodb.us-west-2.amazonaws.com
-# Access credentials for the aws programmatic access. Please make sure that you donot share this information with others or commit
-# it to public.
-access:
-key: AKIA5C7UD3L7KBLGOUGV
-secret-key: Ve+TdZLDi9FqTbnHxoZQHXiAw9DgvfaJ4Ex+vmA6
-# your AWS region where dynamo db instance is located.
-region: us-west-2
+#server:
+##Spring Boot application port
+#    port: 8080
+#
+#aws:
+#    dynamodb:
+##Endpoint that application might connect to
+#endpoint: https://dynamodb.us-west-2.amazonaws.com
+## Access credentials for the aws programmatic access. Please make sure that you donot share this information with others or commit
+## it to public.
+#access:
+#key: AKIA5C7UD3L7KBLGOUGV
+#secret-key: Ve+TdZLDi9FqTbnHxoZQHXiAw9DgvfaJ4Ex+vmA6
+## your AWS region where dynamo db instance is located.
+#region: us-west-2
