DynamoDB test pass

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation 'com.amazonaws:aws-lambda-java-core:1.2.2'
     implementation 'com.amazonaws:aws-lambda-java-events:3.11.0'
     runtimeOnly 'com.amazonaws:aws-lambda-java-log4j2:1.5.1'
+    implementation 'com.github.derjust:spring-data-dynamodb:5.1.0'
+    implementation 'software.amazon.awssdk:dynamodb-enhanced:2.16.74'
 
 
 
